Add path escaping to cmake completion.

BUG: 338196

Reviewers: #kdevelop

Subscribers: kdevelop-devel

Differential Revision: https://phabricator.kde.org/D4760